# data-eng-utn

./: .env.example  .gitignore  README.md  TP1.ipynb  WARP.md  demo_pipeline.ipynb  pyproject.toml  tasks.py
src/: config.py  extractors.py  loaders.py  pipelines.py  transformers.py
src/TP1/: __init__.py  main.py
